sass/components/_pages.scss
/* ... */
 
body.not-front{
  background-position: 0;
  background-size: 600px;
  
  .main{
    padding: 3em 1em;
  }
  
  @media only screen and (min-width: 30.0em) { //480px
    background-position: 0 -50px;
    background-size: 800px;
  }
  
  @media only screen and (min-width: 45.0em) { //720px
    background-position: 0 0;
    background-size: 100%;
  }
  
  @media only screen and (min-width: 60.0em) { //960px
    background-position: 0 -100px;
  }
}


body.home{
  background-position: -100px -50px;
  background-size: auto 550px;
  
  @media only screen and (min-width: 30.0em) { //480px
    background-position: 0 -50px;
  }
  
  @media only screen and (min-width: 45.0em) { //720px
    background-size: auto 650px;
    
  }
  
  @media only screen and (min-width: 80em) { //960px
    background-size: 100%;
    
  }
}

.not-front .main{
  background-color: #fff;
  color: #222;
  padding-bottom: 100px;
  padding-top: 2em;
}

.region-footer{
   bottom: -22px;
 }

  #page{
  position:relative;
  }


h1{
line-height: 1;
}

.header__site-name{
  line-height: 1;
}

.logo{
  padding: 0;  
  @include rem-fallback(font-size, 1);//16px
  text-decoration: none;
  @media only screen and (min-width: 30.0em) { //480px
    padding: 0 1em;  
  }
  

  @media only screen and (min-width: 60em) { //960px
    padding: 0 .3em;
  }  
  
  img{
    margin: 7px 2px;
    padding: 0;
    vertical-align: none;
  }
  span{
    display: none;
    @media only screen and (min-width:  25em) { 
    vertical-align: top;
    padding: 20px 15px 15px 0;
    display: inline-block;
    text-transform: uppercase;
    color: #fafafa;
    font-weight: 400;
    }
    @media only screen and (min-width: 30.0em) { //480px
      padding: 20px 15px;
    
    }
  }
  strong{
    font-weight: 900;
  }
  
  &:hover{
    @include ease;
    border: 0 !important;
    opacity: 0.7;
    text-decoration: none;
  }
}

.header{
  position:fixed;
  top: 0;
  left: 0;
  right: 0; 
  z-index: 100;
  background-color: #222;
  margin: 0;
  padding: 5px 0;
  height: 56px;
  
}

article header{
  position: static;
  background-color: transparent;
  margin: inherit;
  padding: 1em 0 ;
}

.front .main{
  background-color: #fff;
  min-height: 700px;
  color: #f1f1f1;
  padding: 1em 1em 5em;
  
  a
  a:link, 
  a:visited {
     color: $link-color;
     text-decoration: none;
     font-weight: bold;
     padding-bottom: 2px;
     border-bottom: 0 solid darken($link-color, 5%);
   }
  a:hover,
  a:focus,
  a:active{
    color: darken($link-color, 10%);
    border-bottom: 1px solid darken($link-color, 5%);
  }
  h1{
    margin-top: 125px;
    font-size: 1.9em;
    line-height: 1.4;
    text-align: center;
    @media only screen and (min-width: 30.0em) { //480px
    text-align: left;
    font-size: 2.5em;
    }
    @media only screen and (min-width: 45.000em) { //768px
      margin-top: 95px;
      font-size: 3em;
    }
  }
  
  .feature{
    position:relative;
    padding: .5em 1.5em;
    border-bottom: 7px solid #000;
    line-height: 1.5;
    
    -webkit-border-radius: 0px 0px 3px 3px;
            border-radius: 0px 0px 3px 3px;
    
    
    background: transparent;
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000,endColorstr=#66000000)"; /* IE8 */
        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000,endColorstr=#66000000);   /* IE6 & 7 */
          zoom: 1;
    background-color: rgba(0,0,0,0.5);
    
    @media only screen and (min-width: 30.0em) { //480px
      max-width: 600px;
    }
     @media only screen and (min-width: 45.000em) { //768px
        font-size: 1.125em;
        width: 600px;   
    }
  }
}//main


// Home Page Styling
.relative{
  position: relative;
  width: 100%;
  margin-top: 250px;
  .main{
    min-height: 800px;
  }
}
/* ... */

